# svg-generator

./: .gitignore  README.md  automatic_svg_validation.py  main.py  pyproject.toml  report_20260413_141314.json  report_20260413_141320.json  report_20260413_142357.json
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: classifier.py  enricher.py  generator.py  templates.py  validator.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/app/: page.tsx  store.js
frontend/src/components/: DiagramCanvas.tsx
frontend/src/lib/: api.ts
frontend/src/services/: lessonApi.js
src/: api.py  batch.py  config.py  evaluate_pipeline.py  generator.py  groq_pool.py  lesson_models.py  lesson_pipeline.py  lesson_renderer.py  main.py  metrics.py  planner.py  quality_gate.py  rate_limit.py  renderer.py  run_batch.py  utils.py  validator.py
web/: index.html
